Agrego el menu de navegacion de la pagina

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
         <img src="img/logoGrande.jpg" alt="logoPagina">
         <h1> Fullstack con Python </h1>
     </header>
+    <nav>
+        <ul>
+            <li> <a href="index.html"> Inicio </a> </li>
+            <li> <a href="#"> Contenidos </a> </li>
+            <li> <a href="#"> Lenguajes </a> </li>
+            <li> <a href="#"> Herramientas </a> </li>
+            <li> <a href="#"> Contacto </a> </li>
+            <div class="clearfix"></div>
+        </ul>
+    </nav>
 </body>
 
 </html>
