Dejo la primer version de las medias queries

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 </head>
 
 <body>
+    <!-- Maquetacion de header -->
     <header>
         <img src="img/logoGrande.jpg" alt="logoPagina">
         <h1> Fullstack con Python </h1>
     </header>
+
+    <!-- Maquetacion de menu de navegacion -->
     <nav>
         <ul>
             <li> <a href="index.html"> Inicio </a> </li>
