Primera version del contenido principal no responsive

--- a/index.html
+++ b/index.html
@@ -24,6 +24,71 @@
             <div class="clearfix"></div>
         </ul>
     </nav>
+    <div id="contenidoCentral">
+        <main>
+            <section>
+                <h2> Frontend Developer </h2>
+                <article>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi velit id, consequatur facere
+                        laborum nobis excepturi eius voluptatum dolore ratione illum nulla quidem odio, adipisci eum qui
+                        incidunt similique beatae.
+                        <br>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa laboriosam porro libero impedit
+                        tenetur ut debitis a dolorum, aut atque officia harum commodi deserunt magni. Non enim corporis
+                        aspernatur aperiam!
+                        <br>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, nam nulla asperiores
+                        similique error incidunt earum rerum deleniti fuga vitae praesentium dolores doloribus fugit,
+                        corrupti dolorum doloremque necessitatibus velit quo?
+                    </p>
+                    <img src="img/frontend.PNG" alt="frontend">
+                </article>
+                <div class="clearfix"></div>
+            </section>
+            <section>
+                <h2> Backend Developer </h2>
+                <article>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi velit id, consequatur facere
+                        laborum nobis excepturi eius voluptatum dolore ratione illum nulla quidem odio, adipisci eum qui
+                        incidunt similique beatae.
+                        <br>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa laboriosam porro libero impedit
+                        tenetur ut debitis a dolorum, aut atque officia harum commodi deserunt magni. Non enim corporis
+                        aspernatur aperiam!
+                        <br>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, nam nulla asperiores
+                        similique error incidunt earum rerum deleniti fuga vitae praesentium dolores doloribus fugit,
+                        corrupti dolorum doloremque necessitatibus velit quo?
+                    </p>
+                    <img src="img/backend.PNG" alt="backend">
+                </article>
+            </section>
+            <section> 
+                <h2> Fullstack Developer </h2>
+                <article>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi velit id, consequatur facere
+                        laborum nobis excepturi eius voluptatum dolore ratione illum nulla quidem odio, adipisci eum qui
+                        incidunt similique beatae.
+                        <br>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa laboriosam porro libero impedit
+                        tenetur ut debitis a dolorum, aut atque officia harum commodi deserunt magni. Non enim corporis
+                        aspernatur aperiam!
+                        <br>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, nam nulla asperiores
+                        similique error incidunt earum rerum deleniti fuga vitae praesentium dolores doloribus fugit,
+                        corrupti dolorum doloremque necessitatibus velit quo?
+                    </p>
+                    <img src="img/fullstack.png" alt="fullstack">
+                </article> 
+            </section>
+        </main>
+        <aside>
+            <section> Publicidad 1 </section>
+            <section> Publicidad 2 </section>
+            <section> Publicidad 3 </section>
+        </aside>
+        <div class="clearfix"></div>
+    </div>
 </body>
 
 </html>
