Primera opcion de responsive para el contenido principal

--- a/index.html
+++ b/index.html
@@ -83,9 +83,15 @@
             </section>
         </main>
         <aside>
-            <section> Publicidad 1 </section>
-            <section> Publicidad 2 </section>
-            <section> Publicidad 3 </section>
+            <section>  
+                <h3> Aula virtual 1 </h3>
+            </section>
+            <section>
+                <h3> Aula virtual 2 </h3>
+            </section>
+            <section>
+                <h3> Aula virtual 3 </h3>
+            </section>
         </aside>
         <div class="clearfix"></div>
     </div>
