Agrego el footer con la primer version responsive

--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <title> Fullstack con Python </title>
     <link rel="stylesheet" href="css/paginaPrincipal.css">
     <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/33bd96fd9b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
+    <!-- Estructura del header -->
     <header>
         <img src="img/logoGrande.jpg" alt="logoPagina">
         <h1> Fullstack con Python </h1>
     </header>
+
+    <!-- Estructura del menu de navegacion -->
     <nav>
         <ul>
             <li> <a href="index.html"> Inicio </a> </li>
@@ -24,7 +29,11 @@
             <div class="clearfix"></div>
         </ul>
     </nav>
+
+    <!-- Estructura principal -->
     <div id="contenidoCentral">
+
+        <!-- Estructura del contenido principal -->
         <main>
             <section>
                 <h2> Frontend Developer </h2>
@@ -82,6 +91,8 @@
                 </article> 
             </section>
         </main>
+
+        <!-- Estructura de la barra lateral -->
         <aside>
             <section>  
                 <h3> Aula virtual 1 </h3>
@@ -95,6 +106,18 @@
         </aside>
         <div class="clearfix"></div>
     </div>
+
+    <!-- Estructura del footer -->
+    <footer>
+        <div id="informacion">
+            <p> Derechos Reservados  <span><i class="fas fa-copyright"></i>  </span> Alexander Cristian Martínez </p>
+            <p>
+                Envíame tus sugerencias a mi correo:
+                <span> <i class="far fa-envelope"></i> </span>
+                <a href="mailto:alexandercristianmartinez@gmail.com">alexandercristianmartinez@gmail.com</a>
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
