--- a/html/herramientas.html
+++ b/html/herramientas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Fullstack con Python </title>
     <link rel="stylesheet" href="../css/paginaPrincipal.css">
-    <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/33bd96fd9b.js" crossorigin="anonymous"></script>
 </head>
 
