Agrego la primer seccion de la subpagina contactos

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Fullstack con Python </title>
-    <link rel="stylesheet" href="../css/paginaPrincipal.css">
+    <link rel="stylesheet" href="../css/contacto.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/33bd96fd9b.js" crossorigin="anonymous"></script>
 </head>
@@ -29,6 +29,45 @@
             <div class="clearfix"></div>
         </ul>
     </nav>
+
+    <!-- Estructura principal -->
+    <div id="contenidoCentral">
+        <main>
+            <section id="biografia">
+                <h2> Sobre Mi </h2>
+                <article>
+                    <img src="../img/carnet.jpg" alt="alexander">
+                    <p> Hola, que tal? Soy Alexander Cristian Martinez, tengo 21 años actualmente soy estudiante 
+                        de Ingeniería en Sistemas en la Universidad Tecnológica Nacional (FRBA) y estoy cursando
+                        el tercer año de la misma. 
+                        <br>
+                        A su vez estoy como Ayudante de Catedra en la materia de Paradigmas de Programacion.
+                        Me gusta programar, tanto asi que se convirtió en unos de mis hobbies.
+                        <br> 
+                        Por lo cual me anote en paralelo a un curso de fullstack con Ptyhon para aprender un nuevo lenguaje de backend
+                        y además aprender algo que nunca tuve la oportunidad de realizar que es la parte del frontend.
+                        <br>
+                        Con estos conocimientos espero lograr tener una buena base para buscar un trabajo de desarrollador. En
+                        primer medida apuntaria al backend, que es lo que más conozco hasta el momento. A futuro buscaria algún
+                        proyecto de fullstack o quien sabe si con algo de experiencia vaya por el camino del freelance.
+                    </p>
+                    <div id="conocimientos">
+                        <p> Conocimientos </p>
+                        <img src="../img/c.PNG" alt="c">
+                        <div class="nivel">
+                            <p> Nivel </p>
+                            <div class="barra">
+                                <div class="nivelEnBarra"></div>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                </article>
+                <div class="clearfix"></div>
+            </section>
+        </main>
+    </div>
 
     <!-- Estructura del footer -->
     <footer>
