--- a/html/contenidos.html
+++ b/html/contenidos.html
@@ -30,6 +30,10 @@
         </ul>
     </nav>
 
+    <!-- Estructura principal -->
+    <div id="contenidoCentral">
+    </div>
+
     <!-- Estructura del footer -->
     <footer>
         <div id="informacion">
