Agrego indicador de nivel en porcentaje

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -55,7 +55,7 @@
                         <p> Conocimientos </p>
                         <img src="../img/c.PNG" alt="c">
                         <div class="nivel">
-                            <p> Nivel </p>
+                            <p id="nivelEnPorcentaje"> Nivel </p>
                             <div class="barra">
                                 <div class="nivelEnBarra"></div>
                             </div>
