--- a/html/lenguajes.html
+++ b/html/lenguajes.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Fullstack con Python </title>
-    <link rel="stylesheet" href="../css/paginaPrincipal.css">
+    <link rel="stylesheet" href="../css/lenguajes.css">
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/33bd96fd9b.js" crossorigin="anonymous"></script>
 </head>
@@ -31,13 +31,127 @@
     </nav>
 
     <!-- Estructura principal -->
-    <div id="contenidoCentral">
-    </div>
+    <main id="contenidoCentral">
+
+        <section>
+            <div>
+                <h2> HTML </h2>
+            </div>
+            <article class="imagenLenguaje">
+                <img src="../img/html.jpg" alt="html" class="imagenLenguaje">
+            </article>
+            <article class="explicacionLenguaje">
+                <p> HTML, siglas en inglés de HyperText Markup Language (‘lenguaje de marcas de hipertexto’), hace
+                    referencia al lenguaje de marcado para la elaboración de páginas web. Es un estándar que sirve de
+                    referencia del software que conecta con la elaboración de páginas web en sus diferentes versiones,
+                    define una estructura básica y un código (denominado código HTML) para la definición de contenido de
+                    una página web, como texto, imágenes, videos, juegos, entre otros. Es un estándar a cargo del World
+                    Wide Web Consortium (W3C) o Consorcio WWW, organización dedicada a la estandarización de casi todas
+                    las tecnologías ligadas a la web, sobre todo en lo referente a su escritura e interpretación. HTML
+                    se considera el lenguaje web más importante siendo su invención crucial en la aparición, desarrollo
+                    y expansión de la World Wide Web (WWW). Es el estándar que se ha impuesto en la visualización de
+                    páginas web y es el que todos los navegadores actuales han adoptado.
+                </p>
+            </article>
+            <article>
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/mNbnV3aN3KA" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </article>
+        </section>
+
+        <section>
+            <div>
+                <h2> CSS </h2>
+            </div>
+            <article>
+                <img src="../img/css.png" alt="css" class="imagenLenguaje">
+            </article>
+            <article>
+                <p>CSS (siglas en inglés de Cascading Style Sheets), en español «Hojas de estilo en cascada», es un
+                    lenguaje de diseño gráfico para definir y crear la presentación de un documento estructurado escrito
+                    en un lenguaje de marcado. Es muy usado para establecer el diseño visual de los documentos web, e
+                    interfaces de usuario escritas en HTML o XHTML; el lenguaje puede ser aplicado a cualquier documento
+                    XML, incluyendo XHTML, SVG, XUL, RSS, etcétera. Te puede ayudar a crear tu propio sitio web. Junto
+                    con HTML y JavaScript, CSS es una tecnología usada por muchos sitios web para crear páginas
+                    visualmente atractivas, interfaces de usuario para aplicaciones web y GUIs para muchas aplicaciones
+                    móviles (como Firefox OS).
+                    CSS está diseñado principalmente para marcar la separación del contenido del documento y la forma de
+                    presentación de este, características tales como las capas o layouts, los colores y las fuentes.</p>
+            </article>
+            <article>
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/3yM5uXp-T_0" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </article>
+        </section>
+        <!---->
+        <section>
+            <div>
+                <h2> JS </h2>
+            </div>
+            <article>
+                <img src="../img/javascript.png" alt="javascript" class="imagenLenguaje">
+            </article>
+            <article>
+                <p>JavaScript (abreviado comúnmente JS) es un lenguaje de programación interpretado, dialecto del
+                    estándar ECMAScript. Se define como orientado a objetos,​ basado en prototipos, imperativo,
+                    débilmente tipado y dinámico.
+
+                    Se utiliza principalmente del lado del cliente, implementado como parte de un navegador web
+                    permitiendo mejoras en la interfaz de usuario y páginas web dinámicas y JavaScript del lado del
+                    servidor (Server-side JavaScript o SSJS). Su uso en aplicaciones externas a la web, por ejemplo en
+                    documentos PDF, aplicaciones de escritorio (mayoritariamente widgets) es también significativo.
+
+                    Desde 2012, todos los navegadores modernos soportan completamente ECMAScript 5.1, una versión de
+                    JavaScript. Los navegadores más antiguos soportan por lo menos ECMAScript. La sexta edición se
+                    liberó en julio de 2015.</p>
+            </article>
+            <article>
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Q9fwkpxr3Dw" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </article>
+        </section>
+
+        <section>
+            <div>
+                <h2> PYTHON </h2>
+            </div>
+            <article>
+                <img src="../img/python.PNG" alt="" class="imagenLenguaje">
+            </article>
+            <article>
+                <p>
+                    Python es un lenguaje de programación interpretado cuya filosofía hace hincapié en la legibilidad de
+                    su código.2​ Se trata de un lenguaje de programación multiparadigma, ya que soporta orientación a
+                    objetos, programación imperativa y, en menor medida, programación funcional. Es un lenguaje
+                    interpretado, dinámico y multiplataforma.
+
+                    Es administrado por la Python Software Foundation. Posee una licencia de código abierto, denominada
+                    Python Software Foundation License.
+                    Python fue creado a finales de los ochenta4​ por Guido van Rossum en el Centro para las Matemáticas
+                    y la Informática (CWI, Centrum Wiskunde & Informatica), en los Países Bajos, como un sucesor del
+                    lenguaje de programación ABC, capaz de manejar excepciones e interactuar con el sistema operativo
+                    Amoeba.
+                    El nombre del lenguaje proviene de la afición de su creador por los humoristas británicos Monty
+                    Python.
+                </p>
+            </article>
+            <article>
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/gOR9qZ3ZgwA" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </article>
+        </section>
+    </main>
+
+
 
     <!-- Estructura del footer -->
     <footer>
         <div id="informacion">
-            <p> Derechos Reservados  <span><i class="fas fa-copyright"></i>  </span> Alexander Cristian Martínez </p>
+            <p> Derechos Reservados <span><i class="fas fa-copyright"></i> </span> Alexander Cristian Martínez </p>
             <p>
                 Envíame tus sugerencias a mi correo:
                 <span> <i class="far fa-envelope"></i> </span>
