Agrego la estructura para agregar un formulario en la subpagina contacto

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -37,22 +37,11 @@
                 <h2> Sobre Mi </h2>
                 <article>
                     <img src="../img/carnet.jpg" alt="alexander">
-                    <p> Hola, que tal? Soy Alexander Cristian Martinez, tengo 21 años actualmente soy estudiante
-                        de Ingeniería en Sistemas en la Universidad Tecnológica Nacional (FRBA) y estoy cursando
-                        el tercer año de la misma.
-                        <br>
-                        A su vez estoy como Ayudante de Catedra en la materia de Paradigmas de Programacion.
-                        Me gusta programar, tanto asi que se convirtió en unos de mis hobbies.
-                        <br>
-                        Por lo cual me anote en paralelo a un curso de fullstack con Ptyhon para aprender un nuevo
-                        lenguaje de backend
-                        y además aprender algo que nunca tuve la oportunidad de realizar que es la parte del frontend.
-                        <br>
-                        Con estos conocimientos espero lograr tener una buena base para buscar un trabajo de
-                        desarrollador. En
-                        primer medida apuntaria al backend, que es lo que más conozco hasta el momento. A futuro
-                        buscaria algún
-                        proyecto de fullstack o quien sabe si con algo de experiencia vaya por el camino del freelance.
+                    <p> Hola, que tal? Soy Alexander Cristian Martinez, tengo 21 años. Actualmente soy estudiante de Ingeniería en Sistemas en la Universidad Tecnológica Nacional (FRBA) y estoy cursando el tercer año de la misma.
+                        <br> A su vez estoy como Ayudante de Catedra en la materia de Paradigmas de Programacion. Me gusta programar, tanto asi que se convirtió en unos de mis hobbies.
+                        <br> Por lo cual me anote en paralelo a un curso de fullstack con Ptyhon para aprender un nuevo lenguaje de backend y además aprender algo que nunca tuve la oportunidad de realizar que es la parte del frontend.
+                        <br> Con estos conocimientos espero lograr tener una buena base para buscar un trabajo de desarrollador. En primer medida apuntaria al backend, que es lo que más conozco hasta el momento. A futuro buscaria algún proyecto de fullstack
+                        o quien sabe si con algo de experiencia vaya por el camino del freelance.
                     </p>
                     <div id="conocimientos">
                         <p> Conocimientos </p>
@@ -70,23 +59,37 @@
                 <div class="clearfix"></div>
             </section>
             <section id="uqbar">
-                <h2> ¿Queres formar parte de la fundación Uqbar? </h2>
+                <h2> ¿Queres formar parte de la Fundación Uqbar? </h2>
+                <article>
+                    <img src="../img/uqbar.jpg" alt="uqbar">
+                    <p>
+                        Fundación Uqbar es un grupo de docentes, ingenieros e investigadores que tiene por objetivo promover el desarrollo de la educación en informática para favorecer el acceso inclusivo al conocimiento y las innovaciones tecnológicas.
+                        <br> Nos proponemos ayudar cada pada persona pueda poner sus ideas en práctica, y así entender las teorías detrás de nuestras acciones, con la convicción de que nada está escrito en piedra, todo lo que sabemos se puede y se debe
+                        cuestionar.
+                        <br> Uno de sus proyectos es Wollok que es un lenguaje de programación y entorno de desarrollo integrado (IDE) para ser utilizado en el dictado de materias iniciales de programación a objetos. Es ideal para aprender a programar
+                        con objetos ya que permite ir incorporando los conceptos gradualmente permitiendo programar y modelar desde el primer día.
+                    </p>
+                    <div id="formularioContacto">
+                        <p> Dejanos tus datos y te llamamos!! </p>
+                    </div>
+                    <div class="clearfix"></div>
+                </article>
+                <div class="clearfix"></div>
             </section>
             <section id="ubicacionContacto">
                 <h2> Donde encontrarnos y como contactarnos </h2>
                 <article id="ubicacion">
                     <h3> Universidad Tecnológica Nacional (FRBA) </h3>
                     <div id="iframeUbicacion">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.217720206401!2d-58.4221658851955!3d-34.59865566473641!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca7cd5154d8f%3A0xceff1f97c5c94a26!2sDepartamento%20de%20Ingenier%C3%ADa%20Electr%C3%B3nica%20Universidad%20Tecnol%C3%B3gica%20Nacional!5e0!3m2!1ses-419!2sar!4v1601422659557!5m2!1ses-419!2sar"
-                            width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""
-                            aria-hidden="false" tabindex="0"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.217720206401!2d-58.4221658851955!3d-34.59865566473641!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca7cd5154d8f%3A0xceff1f97c5c94a26!2sDepartamento%20de%20Ingenier%C3%ADa%20Electr%C3%B3nica%20Universidad%20Tecnol%C3%B3gica%20Nacional!5e0!3m2!1ses-419!2sar!4v1601422659557!5m2!1ses-419!2sar"
+                            width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </article>
                 <article id="contactoDirecto">
                     <h3> Contacto directo </h3>
                     <div id="contactoInfo">
-                        <p> Email: <a href="mailto:alexandercristianmartinez@gmail.com">alexandercristianmartinez@gmail.com</a> </p>
+                        <p> Email: <a href="mailto:alexandercristianmartinez@gmail.com">alexandercristianmartinez@gmail.com</a>
+                        </p>
                         <p> Linkedin: <a href="https://www.linkedin.com/in/alexander-cristian-mart%C3%ADnez-ab212b199/" target="_blank"> Alexander Cristian Martinez </a> </p>
                         <p> Discord: Alexander Cristian Martínez#1689 </p>
                         <p> Telefono: 4289-4621 </p>
