Agrego el formulario a la subpagina contacto

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -71,6 +71,31 @@
                     </p>
                     <div id="formularioContacto">
                         <p> Dejanos tus datos y te llamamos!! </p>
+                        <form action="#" id="formularioUqbar">
+                            <div class="itemForm">
+                                <label for="fullname"> <span> <i class="far fa-address-book etiquetas"> Apellido y Nombre </i> </span></span> </label>
+                                <input type="text" name="fullname" placeholder="Ingrese su nombre aqui..." class="entradas">
+                            </div>
+                            <div class="itemForm">
+                                <label for="gender"> <span> <i class="fas fa-venus-mars etiquetas"> Seleccion su genero </i> </span> </label>
+                                <select name="gender" id="" class="entradas">
+                                    <option value="Mujer"> Mujer </option>
+                                    <option value="Hombre">Hombre</option>
+                                    <option value="No binario">No binario</option>
+                                </select>
+                            </div>
+                            <div class="itemForm">
+                                <label for="autoDescription"> <span> <i class="far fa-comment-alt etiquetas"> Contanos algo sobre vos</i> </span> </label>
+                                <textarea name="autoDescription" id="" cols="27" rows="4" class="entradas"></textarea>
+                            </div>
+                            <div class="itemForm">
+                                <label for="phone"> <span> <i class="fas fa-mobile-alt etiquetas"> Numero de telefono</i> </span> </label>
+                                <input type="tel" name="phone" placeholder="99-999-999" class="entradas">
+                            </div>
+                            <div class="itemForm">
+                                <input type="submit" value="Enviar informacion" id="botonEnvio">
+                            </div>
+                        </form>
                     </div>
                     <div class="clearfix"></div>
                 </article>
