Agrego adaptacion para tablets

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         corrupti dolorum doloremque necessitatibus velit quo?
                     </p>
                     <img src="img/frontend.PNG" alt="frontend">
+                    <div class="clearfix"></div>
                 </article>
                 <div class="clearfix"></div>
             </section>
@@ -70,6 +71,7 @@
                         corrupti dolorum doloremque necessitatibus velit quo?
                     </p>
                     <img src="img/backend.PNG" alt="backend">
+                    <div class="clearfix"></div>
                 </article>
             </section>
             <section> 
@@ -88,6 +90,7 @@
                         corrupti dolorum doloremque necessitatibus velit quo?
                     </p>
                     <img src="img/fullstack.png" alt="fullstack">
+                    <div class="clearfix"></div>
                 </article> 
             </section>
         </main>
