Puse guatelli en vez de contenidos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav>
         <ul>
             <li> <a href="index.html"> Inicio </a> </li>
-            <li> <a href="html/contenidos.html"> Contenidos </a> </li>
+            <li> <a href="html/contenidos.html"> Guatelli </a> </li>
             <li> <a href="html/lenguajes.html"> Lenguajes </a> </li>
             <li> <a href="html/herramientas.html"> Herramientas </a> </li>
             <li> <a href="html/contacto.html"> Contacto </a> </li>
@@ -38,17 +38,10 @@
             <section>
                 <h2> Frontend Developer </h2>
                 <article>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi velit id, consequatur facere
-                        laborum nobis excepturi eius voluptatum dolore ratione illum nulla quidem odio, adipisci eum qui
-                        incidunt similique beatae.
-                        <br>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa laboriosam porro libero impedit
-                        tenetur ut debitis a dolorum, aut atque officia harum commodi deserunt magni. Non enim corporis
-                        aspernatur aperiam!
-                        <br>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, nam nulla asperiores
-                        similique error incidunt earum rerum deleniti fuga vitae praesentium dolores doloribus fugit,
-                        corrupti dolorum doloremque necessitatibus velit quo?
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi velit id, consequatur facere laborum nobis excepturi eius voluptatum dolore ratione illum nulla quidem odio, adipisci eum qui incidunt similique beatae.
+                        <br> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa laboriosam porro libero impedit tenetur ut debitis a dolorum, aut atque officia harum commodi deserunt magni. Non enim corporis aspernatur aperiam!
+                        <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, nam nulla asperiores similique error incidunt earum rerum deleniti fuga vitae praesentium dolores doloribus fugit, corrupti dolorum doloremque necessitatibus
+                        velit quo?
                     </p>
                     <img src="img/frontend.PNG" alt="frontend">
                     <div class="clearfix"></div>
@@ -58,46 +51,32 @@
             <section>
                 <h2> Backend Developer </h2>
                 <article>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi velit id, consequatur facere
-                        laborum nobis excepturi eius voluptatum dolore ratione illum nulla quidem odio, adipisci eum qui
-                        incidunt similique beatae.
-                        <br>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa laboriosam porro libero impedit
-                        tenetur ut debitis a dolorum, aut atque officia harum commodi deserunt magni. Non enim corporis
-                        aspernatur aperiam!
-                        <br>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, nam nulla asperiores
-                        similique error incidunt earum rerum deleniti fuga vitae praesentium dolores doloribus fugit,
-                        corrupti dolorum doloremque necessitatibus velit quo?
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi velit id, consequatur facere laborum nobis excepturi eius voluptatum dolore ratione illum nulla quidem odio, adipisci eum qui incidunt similique beatae.
+                        <br> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa laboriosam porro libero impedit tenetur ut debitis a dolorum, aut atque officia harum commodi deserunt magni. Non enim corporis aspernatur aperiam!
+                        <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, nam nulla asperiores similique error incidunt earum rerum deleniti fuga vitae praesentium dolores doloribus fugit, corrupti dolorum doloremque necessitatibus
+                        velit quo?
                     </p>
                     <img src="img/backend.PNG" alt="backend">
                     <div class="clearfix"></div>
                 </article>
             </section>
-            <section> 
+            <section>
                 <h2> Fullstack Developer </h2>
                 <article>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi velit id, consequatur facere
-                        laborum nobis excepturi eius voluptatum dolore ratione illum nulla quidem odio, adipisci eum qui
-                        incidunt similique beatae.
-                        <br>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa laboriosam porro libero impedit
-                        tenetur ut debitis a dolorum, aut atque officia harum commodi deserunt magni. Non enim corporis
-                        aspernatur aperiam!
-                        <br>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, nam nulla asperiores
-                        similique error incidunt earum rerum deleniti fuga vitae praesentium dolores doloribus fugit,
-                        corrupti dolorum doloremque necessitatibus velit quo?
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi velit id, consequatur facere laborum nobis excepturi eius voluptatum dolore ratione illum nulla quidem odio, adipisci eum qui incidunt similique beatae.
+                        <br> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa laboriosam porro libero impedit tenetur ut debitis a dolorum, aut atque officia harum commodi deserunt magni. Non enim corporis aspernatur aperiam!
+                        <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, nam nulla asperiores similique error incidunt earum rerum deleniti fuga vitae praesentium dolores doloribus fugit, corrupti dolorum doloremque necessitatibus
+                        velit quo?
                     </p>
                     <img src="img/fullstack.png" alt="fullstack">
                     <div class="clearfix"></div>
-                </article> 
+                </article>
             </section>
         </main>
 
         <!-- Estructura de la barra lateral -->
         <aside>
-            <section>  
+            <section>
                 <h3> Aula virtual 1 </h3>
             </section>
             <section>
@@ -113,7 +92,7 @@
     <!-- Estructura del footer -->
     <footer>
         <div id="informacion">
-            <p> Derechos Reservados  <span><i class="fas fa-copyright"></i>  </span> Alexander Cristian Martínez </p>
+            <p> Derechos Reservados <span><i class="fas fa-copyright"></i>  </span> Alexander Cristian Martínez </p>
             <p>
                 Envíame tus sugerencias a mi correo:
                 <span> <i class="far fa-envelope"></i> </span>
